--- a/packages/SystemUI/res/values/corvus_dimens.xml
+++ b/packages/SystemUI/res/values/corvus_dimens.xml
@@ -16,7 +16,15 @@
    <!-- Volume Panel -->
     <dimen name="volume_dialog_panel_land_margin">68dp</dimen>
 
+
    <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
     <dimen name="global_actions_avatar_size">24dp</dimen>
+
+   <!-- Network traffic monitor -->
+    <dimen name="net_traffic_multi_text_size">8dp</dimen>
+    <dimen name="net_traffic_txt_img_padding">2dp</dimen>
+
+    <!-- Sets a custom extra padding for the QS icons and statusbar date -->
+    <dimen name="qs_items_padding">8dp</dimen>
 
 </resources>
