--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -39,4 +39,18 @@
         android:textAppearance="@style/TextAppearance.StatusBar.Clock"
         systemui:showDark="false" />
 
-</FrameLayout>
+    <com.android.systemui.statusbar.policy.NetworkTrafficQS
+        android:id="@+id/networkTraffic"
+        android:paddingEnd="@dimen/status_bar_end_padding"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:singleLine="false"
+        android:lineSpacingMultiplier="1.2"
+        systemui:showDark="false"
+        android:gravity="right|center_vertical"
+        android:visibility="gone" />
+
+ </FrameLayout>
+
