SystemUI: Add VPN tile
Author: Danny Baumann <dannybaumann@web.de>
Date:   Wed Jul 3 15:12:22 2019 +0200

    SystemUI: Add VPN tile

    Allows quickly connecting/disconnecting to/from VPNs.

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Wed Oct 7 22:51:51 2020 +0100
Edit    Update to Android 11 APIs

Change-Id: Iaa9413bf1071805be8764d92bc5e2dd3131fdaed
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -106,7 +106,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast,screenrecord,aod
+        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast,screenrecord
     </string>
 
     <!-- The minimum number of tiles to display in QuickSettings -->
@@ -114,8 +114,7 @@
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
     <string name="quick_settings_tiles_stock" translatable="false">
-
-        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,ambient_display,location,hotspot,inversion,saver,work,cast,night,reading_mode,screenrecord,reverse,heads_up,volume_panel,dataswitch,cpuinfo,reboot,nfc,caffeine,mono,usb_tether,soundsearch,sound,compass,sync,headphonesbuddy,dark,theme,gaming,fpsinfo
+        wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,aod,location,hotspot,inversion,saver,work,cast,night,reading_mode,screenrecord,reverse,heads_up,volume_panel,dataswitch,cpuinfo,reboot,nfc,caffeine,mono,usb_tether,soundsearch,sound,compass,sync,headphonesbuddy,dark,theme,gaming,fpsinfo,vpn
    </string>
 
     <!-- The tiles to display in QuickSettings -->
