Refactor SB Padding
Change-Id: Iebd378317e2cc4a57b23cfa5e13d8a3b46defd91

--- a/packages/SystemUI/res/values/corvus_dimens.xml
+++ b/packages/SystemUI/res/values/corvus_dimens.xml
@@ -27,4 +27,10 @@
     <!-- Sets a custom extra padding for the QS icons and statusbar date -->
     <dimen name="qs_items_padding">8dp</dimen>
 
+      <!-- Starting padding for custom status bar elements -->
+    <dimen name="status_bar_start_padding">2dp</dimen>
+
+    <!-- Ending padding for custom status bar elements -->
+    <dimen name="status_bar_end_padding">1dp</dimen>
+
 </resources>
