--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -78,8 +78,9 @@
                     android:layout_height="match_parent"
                     android:textAppearance="@style/TextAppearance.StatusBar.Clock"
                     android:singleLine="true"
-                    android:paddingStart="@dimen/status_bar_left_clock_starting_padding"
-                    android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
+                    android:visibility="gone"
+                    android:paddingStart="@dimen/status_bar_start_padding"
+                    android:paddingEnd="@dimen/status_bar_end_padding"
                     android:gravity="center_vertical|start"
                 />
 
